# excelduplicate

./: app.py  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
utils/: duplicate_detector.py
